--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -166,15 +166,167 @@ place_types:
         icon:
           iconUrl: /static/css/images/markers/marker-land_no-prog-or-dead.png
           shadowUrl: /static/css/images/marker-shadow.png
-          iconSize: [50, 60]
-          iconAnchor: [25, 60]
-          shadowSize: [50, 60]
-          shadowAnchor: [14, 60]
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [15, 60]
 
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "park" && "{{properties.marker-color}}" == "f86767" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-parks_no-prog-or-dead.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "school" && "{{properties.marker-color}}" == "f86767" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-qual_no-prog-or-dead.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "police" && "{{properties.marker-color}}" == "f86767" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-safe_no-prog-or-dead.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "rail" && "{{properties.marker-color}}" == "f86767" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-transp_no-prog-or-dead.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "town-hall" && "{{properties.marker-color}}" == "f86767" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-hist_no-prog-or-dead.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
 
       # orange
 
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "wetland" && "{{properties.marker-color}}" == "f1f075" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-land_prog.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [15, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "park" && "{{properties.marker-color}}" == "f1f075" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-parks_prog.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "school" && "{{properties.marker-color}}" == "f1f075" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-qual_prog.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "police" && "{{properties.marker-color}}" == "f1f075" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-safe_prog.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "rail" && "{{properties.marker-color}}" == "f1f075" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-transp_prog.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "town-hall" && "{{properties.marker-color}}" == "f1f075" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-hist_prog.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
       # green
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "wetland" && "{{properties.marker-color}}" == "a3e46b" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-land_comp.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [15, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "park" && "{{properties.marker-color}}" == "a3e46b" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-parks_comp.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "school" && "{{properties.marker-color}}" == "a3e46b" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-qual_comp.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "police" && "{{properties.marker-color}}" == "a3e46b" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-safe_comp.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "rail" && "{{properties.marker-color}}" == "a3e46b" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-transp_comp.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
+
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "town-hall" && "{{properties.marker-color}}" == "a3e46b" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-hist_comp.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 60]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 60]
 
       # zoom < 17
 
