--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -542,7 +542,8 @@ place:
   #TODO: maybe add an autocomplete
   #TODO: DRY up this section
   categories:
-    - name: location_type
+    observation:
+      name: location_type
       value: observation
       label: _(Observation)
       fields:
@@ -561,7 +562,8 @@ place:
           prompt: _(Pollution description)
           placeholder: _(Description...)
           optional: false
-    - name: location_type
+    question:
+      name: location_type
       value: question
       label: _(Question)
       fields:
@@ -570,7 +572,8 @@ place:
           prompt: _(Land use description)
           placeholder: _(Description...)
           optional: false
-    - name: location_type
+    idea:
+      name: location_type
       value: idea
       label: _(Idea)
       fields:
@@ -584,7 +587,8 @@ place:
           prompt: _(Describe your idea below:)
           placeholder: _(Description...)
           optional: false
-    - name: location_type
+    complaint:
+      name: location_type
       value: complaint
       label: _(Complaint)
       fields:
@@ -593,7 +597,8 @@ place:
           prompt: _(What's your complaint?)
           placeholder: _(Description...)
           optional: false
-    - name: location_type
+    air_watch:
+      name: location_type
       value: air_watch
       label: _(Air watch)
       fields:
@@ -607,7 +612,8 @@ place:
           prompt: _(Description)
           placeholder: _(Description...)
           optional: false
-    - name: location_type
+    tree:
+      name: location_type
       value: tree
       label: _(Tree)
       fields:
