--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -447,6 +447,156 @@ place:
 
   location_item_name: location
 
+
+  #### begin dynamic form config ####
+  #
+  #TODO: maybe add an autocomplete
+  #TODO: DRY up this section
+  categories:
+    - name: pollution
+      label: _(Pollution)
+      fields:
+        - name: location_type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          content: report_types
+          optional: false
+        - name: pollution_type
+          type: checkbox_big_buttons
+          prompt: _(Types of pollution)
+          content: pollution_types
+          optional: true
+        - name: title
+          type: text
+          prompt: _(Pollution title)
+          placeholder: _(Enter title)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Pollution description)
+          placeholder: _(Description...)
+          optional: false
+    - name: land_use
+      label: _(Land use)
+      fields:
+        - name: location_type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          content: report_types
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Land use description)
+          placeholder: _(Description...)
+          optional: false
+    - name: air_quality
+      label: _(Air quality)
+      fields:
+        - name: location_type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          content: report_types
+          optional: false
+        - name: title
+          type: text
+          prompt: _(Air quality title)
+          placeholder: _(Enter title)
+          optional: false
+    - name: dog_watch
+      label: _(Dog watch)
+      fields:
+        - name: location_type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          content: report_types
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Dog watch description)
+          placeholder: _(Description...)
+          optional: false
+        - name: dog_thoughts
+          type: textarea
+          prompt: _(What are your thoughts about dogs?)
+          placeholder: _(Type your thoughts here...)
+          optional: false
+    - name: other
+      label: _(Other)
+      fields:
+        - name: location_type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          content: report_types
+          optional: false
+        - name: title
+          type: text
+          prompt: _(Title)
+          placeholder: _(Enter title)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Description)
+          placeholder: _(Description...)
+          optional: false
+
+  # define shared form element content here
+  dynamic_form_content:
+    category_btn_prompt: _(Select a category below:)
+    report_types:
+      - label: _(Observation)
+        value: observation
+      - label: _(Question)
+        value: question
+      - label: _(Idea)
+        value: idea
+      - label: _(Complaint)
+        value: complaint
+      - label: _(Green Screen Vote)
+        value: green_screen_vote
+    pollution_types:
+      - label: _(Sewage)
+        value: sewage
+      - label: _(Tires)
+        value: tires
+      - label: _(Illegal dumpsite)
+        value: dumpsite
+      - label: _(Litter)
+        value: litter
+      - label: _(Other)
+        value: other
+
+  # define form elements that appear on every form here
+  common_form_elements:
+    - name: submitter_name
+      type: text
+      prompt: _(Your name)
+      placeholder: _(Name)
+      optional: true
+    - name: private-submitter_email
+      type: text
+      prompt: _(Your Email)
+      optional: true
+      sticky: true
+      attrs:
+        - key: placeholder
+          value: _(Receive email updates on your report)
+        - key: size
+          value: 30
+    - name: my_image
+      type: file
+      prompt: _(Image)
+      inputfile_label: _(Add an Image)
+      optional: true
+      attrs:
+        - key: accept
+          value: image/*
+    - type: submit
+      label: _(Put it on the map!)
+
+  #### end dynamic form config ####
+
+
+
   items:
     - prompt: _(Type of report)
       type: select
