--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -522,7 +522,7 @@ activity:
   # Place Types
 
 place:
-  dataset_id: report # default is 'place'
+  dataset_slug: report # default is 'place'
   adding_supported: true
   add_button_label: _(Add a report to the map!)
   # Labels for the buttons that toggle the map and list views
