--- a/src/flavors/railwatchers/config.yml
+++ b/src/flavors/railwatchers/config.yml
@@ -1,13 +1,13 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Shareabouts
+  title: Rail Watchers
   # Header name
-  name: Shareabouts
+  name: Rail Watchers
   # Meta description that will show up in Google search results
   meta_description: _(Shareabouts is a mapping tool to gather crowd sourced public input. Use it to collect suggested locations and comments in a social, engaging process.)
   # Meta author that will show up in Google search results
-  meta_author: OpenPlans.org
+  meta_author: SmarterCleanup.org
 
 
   # When the map loads, existing places will be loaded in chunks. By default,
@@ -36,25 +36,27 @@ map:
     maxZoom: 17
   layers:
     - url: //api.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
-      attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="http://mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">.'
 
-    - id: vision
-      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/mapbox/landmarks?url=http://a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
-      type: json
-      visibleDefault: true
-      popupContent: '{{title}}'
-      rules:
-        - condition: 'true'
-          style:
-            color: "#444"
-            opacity: 0.6
-            fillOpacity: 0.1
-            weight: 1
-          icon:
-            iconUrl: /static/css/images/markers/marker-0d85e9.png
-            shadowUrl: /static/css/images/marker-shadow.png
-            iconSize: [25, 41]
-            iconAnchor: [12, 41]
+    - url: //{s}.tiles.openrailwaymap.org/standard/{z}/{x}/{y}.png
+      attribution: '<a href="http://www.openstreetmap.org/copyright">© OpenStreetMap contributors</a>, Style: <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA 2.0</a> <a href="http://www.openrailwaymap.org/">OpenRailwayMap</a> and OpenStreetMap'
+
+    # - id: vision
+    #   url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/mapbox/landmarks?url=http://a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
+    #   type: json
+    #   visibleDefault: true
+    #   popupContent: '{{title}}'
+    #   rules:
+    #     - condition: 'true'
+    #       style:
+    #         color: "#444"
+    #         opacity: 0.6
+    #         fillOpacity: 0.1
+    #         weight: 1
+    #       icon:
+    #         iconUrl: /static/css/images/markers/marker-0d85e9.png
+    #         shadowUrl: /static/css/images/marker-shadow.png
+    #         iconSize: [25, 41]
+    #         iconAnchor: [12, 41]
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
