--- a/src/flavors/defaultflavor/config.yml
+++ b/src/flavors/defaultflavor/config.yml
@@ -1,13 +1,13 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Shareabouts
+  title: Our Community Map
   # Header name
-  name: Shareabouts
+  name: Our Community Map
   # Meta description that will show up in Google search results
-  meta_description: _(Shareabouts is a mapping tool to gather crowd sourced public input. Use it to collect suggested locations and comments in a social, engaging process.)
+  meta_description: _(We are gathering public input on important issues in the community)
   # Meta author that will show up in Google search results
-  meta_author: OpenPlans.org
+  meta_author: smartercleanup.org
 
 
   # When the map loads, existing places will be loaded in chunks. By default,
@@ -29,11 +29,11 @@ map:
 
   options:
     center:
-      lat: 39.9523524
-      lng: -75.1636075
+      lat: 45.50430
+      lng: -122.68055
     zoom: 14
-    minZoom: 10
-    maxZoom: 17
+    minZoom: 1
+    maxZoom: 18
   layers:
     - url: //api.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="http://mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">.'
@@ -59,107 +59,151 @@ map:
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
 place_types:
-  landmark:
-    label: _(Landmark)
+  observation:
+    label: _(Observation)
     rules:
-      - condition: '"{{location_type}}" === "landmark" && {{map.zoom}} < 13 && {{layer.focused}} === false'
-        # Display landmarks as circles (vectors) when zoomed out
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-observation.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
 
-        style:
-          color: '#0d85e9'
-          radius: 3
-          weight: 1
-          opacity: 0.9
-          fillOpacity: 1
-
-      - condition: '"{{location_type}}" === "landmark" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
-        # Display landmarks as icons when zoomed in
-
+      - condition: '{{map.zoom}} < 11'
         icon:
           iconUrl: /static/css/images/markers/dot-0d85e9.png
-          iconSize: [17, 18]
-          iconAnchor: [9, 9]
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
 
-      - condition: '"{{location_type}}" === "landmark" && {{layer.focused}} === true'
-        # Display landmarks as icons when zoomed in
-
+      - condition: '{{map.zoom}} < 14'
         icon:
-          iconUrl: /static/css/images/markers/marker-0d85e9.png
-          shadowUrl: /static/css/images/marker-shadow.png
-          iconSize: [25, 41]
-          shadowSize: [41, 41]
-          iconAnchor: [12, 41]
+          iconUrl: /static/css/images/markers/marker-observation.png
+          iconSize: [12, 14.5]
+          iconAnchor: [6, 14.5]
 
-  park:
-    label: _(Park)
+      - condition: '{{map.zoom}} >= 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-observation.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+  question:
+    label: _(Question)
     rules:
-      - condition: '"{{location_type}}" === "park" && {{layer.focused}}'
-        # Show parks that are points as icons...
-
+      - condition: '{{layer.focused}} === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-4bbd45.png
+          iconUrl: /static/css/images/markers/marker-question.png
           shadowUrl: /static/css/images/marker-shadow.png
-          iconSize: [25, 41]
-          shadowSize: [41, 41]
-          iconAnchor: [12, 41]
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
 
-        # ...and parks that are polygons as shapes.
-
-        style:
-          color: '#4bbd45'
-          weight: 3
-          opacity: 0.9
-          fillOpacity: 0.7
-
-      - condition: '"{{location_type}}" === "park"'
-        # Show parks that are points as icons...
-
+      - condition: '{{map.zoom}} < 11'
         icon:
-          iconUrl: /static/css/images/markers/dot-4bbd45.png
-          iconSize: [17, 18]
-          iconAnchor: [9, 9]
+          iconUrl: /static/css/images/markers/dot-dbcf2c.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
 
-        # ...and parks that are polygons as shapes.
+      - condition: '{{map.zoom}} < 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          iconSize: [12, 14.5]
+          iconAnchor: [6, 14.5]
 
-        style:
-          color: '#4bbd45'
-          weight: 1
-          opacity: 0.9
-          fillOpacity: 0.4
+      - condition: '{{map.zoom}} >= 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
 
-  school:
-    label: _(School)
+  idea:
+    label: _(Idea)
     rules:
-      - condition: '"{{location_type}}" === "school" && {{submission_sets.comments.length}} > 0'
-        # Display schools as circles
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-idea.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
 
-        style:
-          color: '#f95016'
-          radius: 8
-          weight: 4
-          opacity: 0.9
-          fillOpacity: 0.4
-        focus_style:
-          color: '#f95016'
-          radius: 16
-          weight: 4
-          opacity: 0.9
-          fillOpacity: 0.4
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/dot-f95016.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
 
-      - condition: '"{{location_type}}" === "school"'
-        style:
-          color: '#f95016'
-          radius: 8
-          weight: 1
-          opacity: 0.9
-          fillOpacity: 0.4
-        focus_style:
-          color: '#f95016'
-          radius: 16
-          weight: 1
-          opacity: 0.9
-          fillOpacity: 0.4
+      - condition: '{{map.zoom}} < 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-idea.png
+          iconSize: [12, 14.5]
+          iconAnchor: [6, 14.5]
 
+      - condition: '{{map.zoom}} >= 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-idea.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+  complaint:
+    label: _(Complaint)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '{{map.zoom}} < 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [12, 14.5]
+          iconAnchor: [6, 14.5]
+
+      - condition: '{{map.zoom}} >= 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+sidebar:
+  enabled: true
+  legend_enabled: true
+  slug: filter-type
+  # Layers are defined in the "map config" section
+  # TODO: Refactor the Layers section into its own sidebar
+  layersTitle: _(Map Layers)
+  reports:
+    title: _(Report Types)
+    items:
+      - title: _(Observations)
+        image: /static/css/images/markers/marker-observation.png
+        url: /filter/observation
+      - title: _(Ideas)
+        image: /static/css/images/markers/marker-idea.png
+        url: /filter/idea
+      - title: _(Questions)
+        image: /static/css/images/markers/marker-question.png
+        url: /filter/question
+      - title: _(Complaints)
+        image: /static/css/images/markers/marker-complaint.png
+        url: /filter/complaint
+
+leaflet_sidebar:
+  enabled: true
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
@@ -169,9 +213,9 @@ activity:
 
 place:
   adding_supported: true
-  add_button_label: _(Add a Place)
+  add_button_label: _(Add a report to the map!)
   # Labels for the buttons that toggle the map and list views
-  show_list_button_label: _(List All Places)
+  show_list_button_label: _(See all reports)
   show_map_button_label: _(Show the Map)
   action_text: _(added)
   title: _(Tell us more...)
@@ -182,6 +226,37 @@ place:
   location_item_name: location
 
   items:
+    - prompt: _(Type of report)
+      type: select
+      options:
+        - label: _(Observation)
+          value: observation
+        - label: _(Question)
+          value: question
+        - label: _(Idea)
+          value: idea
+        - label: _(Complaint)
+          value: complaint
+      name: location_type
+      attrs:
+        - key: required
+    - prompt: _(Title of report)
+      type: text
+      name: name
+      optional:
+      attrs:
+        - key: required
+        - key: placeholder
+          value: _(Enter title)
+        - key: size
+          value: 30
+    - prompt: _(Description)
+      type: textarea
+      name: description
+      optional: true
+      attrs:
+        - key: placeholder
+          value: _(Description...)
     - prompt: _(Your Name)
       type: text
       name: submitter_name
@@ -199,39 +274,9 @@ place:
       sticky: true
       attrs:
         - key: placeholder
-          value: _(Email address)
+          value: _(Receive email updates on your report)
         - key: size
           value: 30
-    - prompt: _(Location Name)
-      type: text
-      name: name
-      optional: true
-      attrs:
-        - key: placeholder
-          value: _(Location Name)
-        - key: size
-          value: 30
-    - prompt: _(Location Type)
-      type: select
-      options:
-        - label: _(Choose One)
-          value: ''
-        - label: _(Landmark)
-          value: landmark
-        - label: _(Park)
-          value: park
-        - label: _(School)
-          value: school
-      name: location_type
-      attrs:
-        - key: required
-    - prompt: _(Description)
-      type: textarea
-      name: description
-      optional: true
-      attrs:
-        - key: placeholder
-          value: _(Description...)
     - prompt: _(Image)
       inputfile_label: _(Add an Image)
       type: file
@@ -281,44 +326,10 @@ pages:
   - title: _(About)
     slug: about
     name: overview
-    start_page: true
 
-  - title: _(More...)
-    pages:
-      - title: _(Why Shareabouts?)
-        slug: why
-        url: /static/pages/why.html
-
-      - title: _(Features)
-        slug: features
-        url: /static/pages/features.html
-
-  - title: _(Links)
-    pages:
-      - title: _(Documentation)
-        external: true
-        url: https://github.com/openplans/shareabouts/tree/master/doc
-      - title: _(Issues)
-        external: true
-        url: https://github.com/openplans/shareabouts/issues
-      - title: _(GitHub)
-        external: true
-        url: https://github.com/openplans/shareabouts
-  - title: Filter Places
-    slug: filter-type
-    pages:
-      - title: All
-        external: true
-        url: /filter/all
-      - title: _(Landmark)
-        url: /filter/landmark
-        external: true
-      - title: _(Park)
-        url: /filter/park
-        external: true
-      - title: _(School)
-        url: /filter/school
-        external: true
+  - title: _(Get involved)
+    slug: getinvolved
+    name: contribute
 
 notifications:
   on_new_place: true
