--- a/src/flavors/willamette/config.yml
+++ b/src/flavors/willamette/config.yml
@@ -41,20 +41,8 @@ map:
     - id: pins
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/mapbox/landmarks?url=http://a.tiles.mapbox.com/v4/smartercleanup.p58e6k92/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       type: landmark
+      placeType: mapbox
       visibleDefault: true
-      popupContent: '{{title}}{{description}}'
-      rules:
-        - condition: 'true'
-          style:
-            color: "#444"
-            opacity: 0.6
-            fillOpacity: 0.1
-            weight: 1
-          icon:
-            iconUrl: /static/css/images/markers/marker-0d85e9.png
-            shadowUrl: /static/css/images/marker-shadow.png
-            iconSize: [25, 41]
-            iconAnchor: [12, 41]
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
@@ -76,12 +64,6 @@ place_types:
           iconUrl: /static/css/images/markers/dot-0d85e9.png
           iconSize: [10, 12]
           iconAnchor: [5, 12]
-
-      - condition: '{{map.zoom}} < 14'
-        icon:
-          iconUrl: /static/css/images/markers/marker-observation.png
-          iconSize: [12, 14.5]
-          iconAnchor: [6, 14.5]
 
       - condition: '{{map.zoom}} >= 14'
         icon:
@@ -199,20 +181,19 @@ place_types:
           fillOpacity: '{{properties.fill-opacity}}'
           weight: "{{properties.stroke-width}}"
 
+      - condition: '"{{geometry.type}}" == "Point" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 30]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 30]
+
       - condition: '"{{geometry.type}}" == "Point"'
         icon:
           iconUrl: /static/css/images/markers/marker-star.png
           iconSize: [30, 30]
           iconAnchor: [15, 15]
-
-      - condition: '"{{geometry.type}}" == "Point" && "{{layer.focused}}" === true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-star.png
-          iconSize: [50, 60]
-          iconAnchor: [25, 60]
-          shadowSize: [50, 60]
-          shadowAnchor: [14, 60]
-
 
 sidebar:
   enabled: true
@@ -361,6 +342,7 @@ pages:
   - title: _(About)
     slug: about
     name: overview
+    start_page: true
 
   - title: _(Get involved)
     slug: getinvolved
