--- a/src/flavors/willamette/config.yml
+++ b/src/flavors/willamette/config.yml
@@ -1,9 +1,9 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Our Community Map
+  title: Hey Willamette!
   # Header name
-  name: Our Community Map
+  name: Hey Willamette!
   # Meta description that will show up in Google search results
   meta_description: _(We are gathering public input on important issues in the community)
   # Meta author that will show up in Google search results
@@ -42,6 +42,11 @@ map:
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/mapbox/landmarks?url=http://a.tiles.mapbox.com/v4/smartercleanup.p58e6k92/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       type: landmark
       placeType: mapbox
+      visibleDefault: true
+      legend: true
+      opacity: 0.9
+      title: _(Points of interest)
+      description: _(Areas where improvements can and are being made along the river)
       visibleDefault: true
 
 # The keys show up in the dropdown list when you are adding a new place
@@ -89,12 +94,6 @@ place_types:
           iconSize: [10, 12]
           iconAnchor: [5, 12]
 
-      - condition: '{{map.zoom}} < 14'
-        icon:
-          iconUrl: /static/css/images/markers/marker-question.png
-          iconSize: [12, 14.5]
-          iconAnchor: [6, 14.5]
-
       - condition: '{{map.zoom}} >= 14'
         icon:
           iconUrl: /static/css/images/markers/marker-question.png
@@ -119,12 +118,6 @@ place_types:
           iconSize: [10, 12]
           iconAnchor: [5, 12]
 
-      - condition: '{{map.zoom}} < 14'
-        icon:
-          iconUrl: /static/css/images/markers/marker-idea.png
-          iconSize: [12, 14.5]
-          iconAnchor: [6, 14.5]
-
       - condition: '{{map.zoom}} >= 14'
         icon:
           iconUrl: /static/css/images/markers/marker-idea.png
@@ -148,12 +141,6 @@ place_types:
           iconUrl: /static/css/images/markers/marker-complaint.png
           iconSize: [10, 12]
           iconAnchor: [5, 12]
-
-      - condition: '{{map.zoom}} < 14'
-        icon:
-          iconUrl: /static/css/images/markers/marker-complaint.png
-          iconSize: [12, 14.5]
-          iconAnchor: [6, 14.5]
 
       - condition: '{{map.zoom}} >= 14'
         icon:
