update meta description

--- a/src/flavors/waterfront/config.yml
+++ b/src/flavors/waterfront/config.yml
@@ -5,7 +5,7 @@ app:
   # Header name
   name: Which Georgetown waterfront?
   # Meta description that will show up in Google search results
-  meta_description: _(The residents of Georgetown have an opportunity to improve their waterfront access points. We are collaborating with the community to do a King County Waterworks grant)
+  meta_description: _(The Georgetown Community Council, King County and the City of Seattle are interested in jointly pursuing a King County WaterWorks grant to design for better community access to the river and less polluted stormwater runoff in the Georgetown neighborhood.)
   # Meta author that will show up in Google search results
   meta_author: smartercleanup.org
 
