add air watch place type

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -469,6 +469,37 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
+  # using temporary icons
+  air_watch:
+    label: _(Air Watch)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '{{map.zoom}} < 17'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [18, 21.75]
+          iconAnchor: [9, 21.75]
+
+      - condition: '{{map.zoom}} >= 17'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
@@ -586,7 +617,6 @@ place:
   #### begin dynamic form config ####
   #
   #TODO: maybe add an autocomplete
-  #TODO: DRY up this section
   categories:
     observation:
       name: location_type
